<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能交通系统</string>
    <string name="current_time">当前时间是：%s</string>
    <string name="current_speed">小车的当前速度是：%s km/h</string>
    <string name="current_location">小车的当前位置是：%s</string>
    <string name="recharge_msg">在 %1$s 将要给 %2$s 号小车充值%3$s 元</string>
    <string name="balance">小车账户余额是：%s 元</string>
    <string name="one_bus_speed">1号公交：%s m</string>
    <string name="two_bus_speed">2号公交：%s m</string>
    <string name="one_station">距1号站台距离：</string>
    <string name="two_station">距2号站台距离：</string>
    <string name="one_location">1号</string>
    <string name="two_location">2号</string>
    <string name="waiting_envir">候车环境：</string>
    <string name="bus_envir">PM2.5：%1$s	 μg/m³		，温度：%2$s	℃	，湿度：%3$s	%%	，CO2：%4$s   μg/m³</string>
    <string name="bus_station">距1号站台距离：\n 1号公交：%1$d m  ,  2号公交：%2$d m \n 距2号站台距离：\n 1号公交：%3$d m  ,  2号公交：%4$d m</string>
    <string name="envir">道路环境：\n PM2.5：%1$d	 μg/m³		,  温度：%2$d	℃	 \n 湿度：%3$d	   %%， CO2：%4$d   μg/m³</string>
    <string name="light">光照强度：%s  lux</string>
    <string name="its"> \t智\t能\n交通系统</string>
    <string name="query">查询</string>
    <string name="charge">充值</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="start_stop">启停：</string>
    <string name="bout">元/次</string>
    <string name="sure">确定</string>
    <string name="set">设置</string>
    <string name="set_rate">费率设置</string>
    <string name="success">%s成功</string>
    <string name="sort">排序规则：</string>
    <string name="consumption_record_query">消费记录查询</string>
    <string name="air_quality">空气质量：</string>
    <string name="light_strength">光照强度：</string>
    <string name="car_account_query">小车账户查询：</string>
    <string name="car_account_charge">小车账户充值：</string>
    <string name="car_current_speed">小车当前速度：</string>
    <string name="car_current_location">小车当前位置：</string>
    <string name="car_current_locus">小车当前轨迹：</string>
    <string name="car_control_start_stop">小车启停控制：</string>
    <string name="car_id">车号：</string>
    <string name="car_speed">小车速度</string>
    <string name="park_query_crrunt_rate">停车场当前费率查询：</string>
    <string name="park_query_crrunt_free_location">当前空闲停车位查询：</string>
    <string name="park_set_rate">设置停车场费率：</string>
    <string name="park_rate">停车场费率：</string>
    <string name="park_card">停车卡挂失：</string>
    <string name="park_log">查询停车场停车日志</string>
    <string name="park_show_rate">停车车的费率为：%s  元/次</string>
    <string name="etc_query_crrunt_cost">ETC当前费率查询：</string>
    <string name="etc_set_cost">设置ETC费率：</string>
    <string name="etc_cost">ETC费率：</string>
    <string name="etc_card">ETC卡挂失：</string>
    <string name="etc_log">查询ETC日志</string>
    <string name="light_msg_query">红绿灯配置信息查询：</string>
    <string name="light_road_query">路面红绿灯信息查询：</string>
    <string name="free_location">空闲车位</string>
    <string name="road_envir">道路环境</string>
    <string name="road_crrunt_msg">道路实时信息：</string>
    <string name="road_port">%s号路口</string>
    <string name="query_bus">公交查询</string>
    <string name="control">控制</string>
    <string name="condition">状态</string>
    <string name="account">账户</string>
    <string name="title_etc">ETC缴费</string>
    <string name="title_ip">IP设置</string>
    <string name="title_main">主界面</string>
    <string name="title_light">红绿灯</string>
    <string name="title_park">停车场查询</string>
    <string name="title_one_station">1号站台</string>
    <string name="title_two_station">2号站台</string>
    <string name="title_road_msg">道路信息</string>
    <string name="title_road_envir">道路环境</string>
    <string name="title_my_road">我的路况</string>
    <string name="hint_account">1-9999</string>
    <string name="msg_pm_pollute">PM2.5污染严重，请全副武装哦！\n</string>
    <string name="msg_co2_high">CO2 污染太严重啊 \n</string>
    <string name="msg_temp_high">热死了！热死了！赶紧去屋里躲躲 ! \n</string>
    <string name="msg_temp_low">太冷了 ，进屋躲躲! \n</string>
    <string name="msg_humi_high">湿度太大！ \n</string>
    <string name="msg_humi_low">空气太干燥 \n</string>
    <string name="msg_light_low">光线较暗，请开灯驾驶! \n</string>
    <string name="msg_light_high">太刺眼了 ! \n</string>
    <string name="ip_failed">请输入有效的IP地址!</string>
    <string name="handl">%1$s 不能为空!</string>
    <string name="handl_ip">IP地址</string>
    <string name="handl_recharge">充值金额</string>
    <string name="handl_rate">费率金额</string>
    <string name="dialog_title_recharge">小车账户充值</string>
    <string name="bus_station1">距1号站台距离：\n 1号公交：%1$s m  ,  2号公交：%2$s m</string>
    <string name="bus_station2">距2号站台距离：\n 1号公交：%1$s m  ,  2号公交：%2$s m</string>
    <string name="con_type_http">HTTP连接</string>
    <string name="con_type_mqtt">MQTT连接</string>
    <string name="etc_current_cost">当前ETC费率：%s 元/次</string>
    <string name="car_status_abnormal">小车故障信息查询:</string>
    <string name="car_status_content">小车单项信息查询:</string>
    <string name="car_query_content">查询内容:</string>
    <string name="get_car_trouble">车辆故障查询</string>
    <string name="get_car_state">车辆状态查询</string>
    <string name="car_map_info">小车地图信息</string>
    <string name="layer_navi">导航视图</string>
    <string name="layer_night">夜景视图</string>
    <string name="layer_normal">白昼视图</string>
    <string name="layer_satellite">卫星视图</string>
    <string name="layer_traffic">交通视图</string>
    <string name="location">定位</string>
    <string name="change_layer">图层切换</string>
    <string name="marker">点标记</string>
    <string name="line_distance">直线距离</string>
    <string name="default_ip">192.168.0.238</string>
</resources>